--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,4 +1,5 @@
 @import 'alphabet_board.css';
+@import 'hangman.css';
 
 body {
     background-color: rgb(213, 213, 213);
@@ -20,7 +21,30 @@ body {
     grid-template-rows: 4fr 1fr 4fr;
 }
 
-#hangman_container {
+#word_container {
+    height: 100%;
+    width: 100%;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    background-color: azure;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+#input_and_button {
+    height: 100%;
+    width: 85%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#input_container {
+    height: 30%;
+    /* align-self: center; */
+}
+
+#word_to_guess {
     height: 100%;
     width: 100%;
     display: flex;
@@ -28,68 +52,13 @@ body {
     align-items: center;
 }
 
-#hangman_pole {
-    width: 10%;
-    height: 90%;
-    border-top: 2px black solid;
-    border-right: 2px black solid;
+.letters_of_word_to_guess {
+    height: 80%;
+    width: 50px;
     border-bottom: 2px black solid;
-    margin: 50px;
-
+    margin: 10px;
 }
 
-#border-left {
-    height: 20%;
-    width: 0%;
-    border-left: black 2px solid;
-}
-
-#head {
-    height: 40px;
-    width: 40px;
-    margin-left: -22px;
-    border: 2px black solid;
-    border-radius: 50%;
-}
-
-#body {
-    height: 20%;
-    width: 0%;
-    border-left: black 2px solid;
-}
-
-#left_arm {
-    height: 80%;
-    border: 1px black solid;
-    transform: rotate(45deg);
-    position: relative;
-    left: -20px;
-    top: 5px;
-}
-
-#right_arm {
-    height: 80%;
-    border: 1px black solid;
-    transform: rotate(-45deg);
-    position: relative;
-    left: 17px;
-    top: -47px;
-}
-
-#left_leg {
-    height: 80%;
-    border: 1px black solid;
-    transform: rotate(45deg);
-    position: relative;
-    left: -20px;
-    top: -53px;
-}
-
-#right_leg {
-    height: 80%;
-    border: 1px black solid;
-    transform: rotate(-45deg);
-    position: relative;
-    left: 17px;
-    top: -105px;
+.is_space {
+    border-bottom: none;
 }
