--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,6 +57,10 @@ body {
     width: 50px;
     border-bottom: 2px black solid;
     margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
 }
 
 .is_space {
