--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,5 +1,6 @@
 @import 'alphabet_board.css';
 @import 'hangman.css';
+@import 'word_container.css';
 
 body {
     background-color: rgb(213, 213, 213);
@@ -21,48 +22,4 @@ body {
     grid-template-rows: 4fr 1fr 4fr;
 }
 
-#word_container {
-    height: 100%;
-    width: 100%;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    background-color: azure;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-}
 
-#input_and_button {
-    height: 100%;
-    width: 85%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-#input_container {
-    height: 30%;
-    /* align-self: center; */
-}
-
-#word_to_guess {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.letters_of_word_to_guess {
-    height: 80%;
-    width: 50px;
-    border-bottom: 2px black solid;
-    margin: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 40px;
-}
-
-.is_space {
-    border-bottom: none;
-}
